@@ -4,6 +4,7 @@ This file keeps a record of important changes to the project.
 This project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
 ## [Unreleased] - <>
+- No longer need to hold CTRL to pan, simply click and drag at any time!
 
 ## [v0.7.4] - 2020-05-07
 ### Changed
